--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
-
+*.pem
 # Ignore providers.tf file
 providers.tf
 
 # Ignore .terraform directory
-
-
-
+*.retry
+aws_hosts
+crash.log
+*.tfstate
+*.tfstate.*
 .terraform/
-
+*.io.key
